--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongoose": "^8.16.4",
+    "node-cache": "^5.1.2",
     "nodemailer": "^7.0.5",
     "pdfkit": "^0.17.1"
   },
