--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dayjs": "^1.11.13",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.0",
     "exceljs": "^4.4.0",
     "express": "^5.1.0",
@@ -25,7 +25,8 @@
     "mongoose": "^8.16.4",
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.5",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "utc": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
