--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "homepage": ".",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dayjs": "^1.11.18",
